Bug 261958 - google calendar not synced using akonadi google resource
Summary: google calendar not synced using akonadi google resource
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: GoogleData Resource (other bugs)
Version First Reported In: 1.0.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-03 15:01 UTC by Alin M Elena
Modified: 2011-01-05 01:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-01-03 15:01:38 UTC
Version:           SVN trunk (KDE 4) (using Devel) 
OS:                Linux

Using akonadi google resource, google calendar events and todos, do not get synced.
I do not know if matters but I use for my akonadiserver an external mysql server...




Reproducible: Always

Steps to Reproduce:
add na google calendar using the akonadi resource
add an event in calendar, add a todo, and they do not appear remotely in the google calendar.... akonadiconsole browser shows that they are local only.



OS: Linux (x86_64) release 2.6.37-rc8-desktop
Compiler: gcc
Comment 1 Sergio Martins 2011-01-03 15:17:17 UTC
Download works. Upload doesn't.
The resource's itemAdded() is never called.
Comment 2 Sergio Martins 2011-01-05 01:52:07 UTC
SVN commit 1211814 by smartins:

Creating new events with korganizer never reached google. A fetchCollection( true ) was missing.

BUG: 261958


 M  +1 -0      gcalresource.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1211814