Creating new events with korganizer never reached google. A fetchCollection( true ) was missing.

BUG: 261958

svn path=/trunk/extragear/pim/googledata/; revision=1211814